--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 node_modules
-n
+
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+#File
+image/*
+image_PromptpayQR/*
+.env
